--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Config Azure OpenAI credentials at here
 AZURE_OPENAI_MODEL="gpt-4o"
 AZURE_OPENAI_API_KEY="<your-api-key>"
 AZURE_OPENAI_ENDPOINT="https://<your-resource-name>.openai.azure.com/"
